# musicbotd

./: CMakeLists.txt
src/: client_connection.cpp  client_connection.hpp  config_manager.cpp  config_manager.hpp  main.cpp  player.cpp  player.hpp  server.cpp  server.hpp
src/api/: v1.cpp  v1.hpp
src/music/: music.cpp  music.hpp  music_manager.cpp  music_manager.hpp  player.cpp  player.hpp  playlist.hpp
